registration feature added

--- a/mech-warehouse.WebAPI/appsettings.json
+++ b/mech-warehouse.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "connectionString": "Server=.;Database=mech-warehouse;Integrated Security=true; TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidAudience": "http://localhost:3000",
+    "ValidIssuer": "http://localhost:7070",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
