--- a/mech-warehouse.WebAPI/appsettings.json
+++ b/mech-warehouse.WebAPI/appsettings.json
@@ -11,7 +11,7 @@
   },
   "JWT": {
     "ValidAudience": "http://localhost:3000",
-    "ValidIssuer": "http://localhost:7070",
+    "ValidIssuer": "https://localhost:7070",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
