--- a/mech-warehouse-gui/package.json
+++ b/mech-warehouse-gui/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jwt-decode": "^3.1.0",
     "@types/react-scroll": "^1.8.10"
   }
 }
